--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,8 @@ maintenance = { status = "passively-maintained" }
 [dependencies]
 bitflags = "1.2"
 embedded-hal = "=1.0.0-alpha.10"
-log = "0.4"
+defmt = "0.3"
+defmt-rtt = "0.4"
 
 [dev-dependencies]
 
